# GWatch-Paris

./: CMakeLists.txt  README.md  notes.txt  package-lock.json  sdkconfig  sdkconfig.old
components/cfscn__sensorlib/examples/BHI260AP_aux_BMM150_BME280_Expand_GPIO/: BHI260AP_aux_BMM150_BME280_Expand_GPIO.ino
components/cfscn__sensorlib/examples/TouchDrv_CST9217_GetPoint/: TouchDrv_CST9217_GetPoint.ino
components/cfscn__sensorlib/examples/TouchDrv_CSTxxx_GetPoint/: TouchDrv_CSTxxx_GetPoint.ino
components/cfscn__sensorlib/examples/XL9555_ExtensionIOWirte/: XL9555_ExtensionIOWirte.ino
components/cfscn__sensorlib/src/: SensorQMI8658.hpp
components/fonts/: CMakeLists.txt  fonts.h  fonts.py  generated_sources.cmake  symbols.json
components/watchui/: CMakeLists.txt  file_list_gen.cmake  globals.xml  project.xml  ui.c  ui.h  watchui.c  watchui.h  watchui_gen.c  watchui_gen.h
components/watchui/components/: timescreen.xml  timescreen_gen.c  timescreen_gen.h
components/watchui/fonts/: GoogleSansBold_20  GoogleSansBold_20_data.c  GoogleSansBold_24_data.c  GoogleSansBold_36  GoogleSansBold_36_data.c  GoogleSansBold_42_data.c  GoogleSans_10_data.c  GoogleSans_14_data.c
components/watchui/screens/: watchscreen.xml  watchscreen_gen.c  watchscreen_gen.h
main/: CMakeLists.txt  battery.c  battery.h  display.c  idf_component.yml  main.c  main.txt  overlay.c  pins.h  ui.c  ui.h  watch.cpp  watch.hpp  wifitime.c
main/assets/: croppedoverlay.c
main/display/: cst816s.c  cst816s_driver.h  display.c  display.cpp  display.h  display.hpp  gc9a01_driver.h  graphics.cpp
main/display/drivers/: cst816s_driver.h  gc9a01_driver.h
main/drivers/: cst816s.c  display.h  gc9a01_driver.c  gc9a01_driver.h
main/hardware/: battery.c  battery.cpp  battery.h  battery.hpp  imu.cpp  imu.hpp  motor.cpp  motor.hpp
main/hardware/drivers/: qmi8658.c  qmi8658.h
main/system/: bluetooth.c  bluetooth.cpp  bluetooth.hpp  bluetooth.txt  common.h  gap.c  schedule.cpp  schedule.hpp  settings.cpp  settings.hpp  system.h  wifi.cpp  wifi.hpp  wifitime.c  wifitime.h
main/ui/: analogwatch.cpp  apps.cpp  debug.cpp  imu.cpp  quicksettings.cpp  rotarywatch.cpp  stopwatch.cpp  timewatch.cpp  ui.c  ui.cpp  ui.h  ui.hpp  watchscr.c  watchscr.cpp  wifiscr.c
main/ui/faces/: analogwatch.cpp  watchface.cpp
main/ui/screens/: apps.cpp  calculator.cpp  debug.cpp  dice.cpp  imu.cpp  quicksettings.cpp  schedule.cpp  stopwatch.cpp  timer.cpp
